Configure ReadMe File and the necessary images

--- a/Assist.Lunch.4/Assist.Lunch.4/appsettings.json
+++ b/Assist.Lunch.4/Assist.Lunch.4/appsettings.json
@@ -10,7 +10,7 @@
     "Issuer": ""
   },
   "ConnectionStrings": {
-    "SqlDbConnectionString": ""
+    "SqlDbConnectionString": "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword;"
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigningKey": true,
